--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
     <div class="sugarNSpice"> 
         <nav>
-            <h2 class="BigButton">Portfolio</h2>
+            <h2 class="BigButton"><span>Port</span>folio</h2>
             <ul>
                 <li><a href="p">Home</a></li>
                 <li><a href="p">About me</a></li>
                 <li><a href="p">Contact</a></li>
                 <li><a href="p">Skills</a></li>
             </ul>
-            <a href="p">Subscribe</a>
+            <a href="https://www.youtube.com/channel/UCGDtQIHKh6Xe1ic2_UH10iA" class="follow">Subscribe</a>
         </nav>
     </div>
 </body>
