--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             </ul>
             <a href="https://www.youtube.com/channel/UCGDtQIHKh6Xe1ic2_UH10iA" class="follow">Subscribe</a>
         </nav>
+        <div class="introduction">
+            <h2>Hello there, my name is</h2>
+            <h1>Keith Wesley</h1>
+            <h2> I am a Developer in training and a Gaming Youtuber.</h2>
+        </div>
     </div>
 </body>
 </html>
