About me & Contact

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <nav>
             <h2 class="BigButton"><span>Port</span>folio</h2>
             <ul>
-                <li><a href="p">Home</a></li>
-                <li><a href="p">About me</a></li>
-                <li><a href="p">Contact</a></li>
-                <li><a href="p">Skills</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#About2">About me</a></li>
+                <li><a href="#Reach">Contact</a></li>
+                <li><a href="#">Skills</a></li>
             </ul>
             <a href="https://www.youtube.com/channel/UCGDtQIHKh6Xe1ic2_UH10iA" class="follow">Subscribe</a>
         </nav>
@@ -21,6 +21,24 @@
             <h1>Keith Wesley</h1>
             <h2> I am a Developer in training and a Gaming Youtuber.</h2>
         </div>
+    </div>
+
+    <section class="About">
+        <div class="main">
+            <img src="./images/Me again.jpg" alt="picture of me">
+            <div class="The-text">
+                <h3 id="About2">About Me</h3>
+                <h4>Developer trainee & Youtuber</h4>
+                <p>
+                    Gaming has always been a passion of mine since I saw the playstation. I started on consoles but quickly transitioned to Pc gaming where I fell in love with games like Halo, midtown madness, Age of Empires etc.<br>
+<br>Gaming inspired me to join the tech world to give back to the awesome community hence Software Development and Youtube Gaming.
+                </p>
+            </div>
+        </div>
+    </section>
+    <div class="contact-me">
+        <p id="Reach">Reach out to me</p>
+        <a class="Rada" href="#">Talk to me</a>
     </div>
 </body>
 </html>
