Added a link to my CV

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2>Hello there, my name is</h2>
             <h1>Keith Wesley</h1>
             <h2> I am a Developer in training and a Gaming Youtuber.</h2>
+            <a href="./credentials/KEITH WESLEY updated CV.pdf" download="Wesley CV">Download CV</a>
         </div>
     </div>
 
@@ -38,7 +39,7 @@
     </section>
     <div class="contact-me">
         <p id="Reach">Reach out to me</p>
-        <a class="Rada" href="#">Talk to me</a>
+        <a class="Rada" href="mailto:keithwesley187@gmail.com">Talk to me</a>
     </div>
 </body>
 </html>
