Added skills section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
             </div>
         </div>
     </section>
+
+    <section class="Skills">
+        <div class="skills2">
+            <img src="./images/Grandmaster.jpg" alt="Grandmaster">
+            <div class="Looks">
+                <img src="./images/Steamgames.png" alt="Steamgames">
+                <h3 id="skills">Skills</h3>
+                <h4>Gaming skills</h4>
+                <p>I have played many games before steam was a thing. I played a lot of games hard core, invested a lot of hours chasing leaderboard ranks.<br>
+                    <br>I have won local tournaments that involved shooting games as well as team play such as Paladins, Call of duty etc.<br>
+                    <br>Mmos like Black Desert Online is where I finally ended up because of the vast content and flexibility. It is truly my metaverse.
+                </p>
+            </div>
+        </div>
+    </section>
     <div class="contact-me">
         <p id="Reach">Reach out to me</p>
         <a class="Rada" href="mailto:keithwesley187@gmail.com">Talk to me</a>
