--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#About2">About me</a></li>
                 <li><a href="#Reach">Contact</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
             <a href="https://www.youtube.com/channel/UCGDtQIHKh6Xe1ic2_UH10iA" class="follow">Subscribe</a>
         </nav>
         <div class="introduction">
-            <h2>Hello there, my name is</h2>
             <h1>Keith Wesley</h1>
-            <h2> I am a Developer in training and a Gaming Youtuber.</h2>
             <a href="./credentials/KEITH WESLEY updated CV.pdf" download="Wesley CV">Download CV</a>
         </div>
     </div>
@@ -39,10 +37,9 @@
     </section>
 
     <section class="Skills">
-        <div class="skills2">
-            <img src="./images/Grandmaster.jpg" alt="Grandmaster">
+        <div class="Skills2">
+            <img src="./images/Steamgames.png" alt="Grandmaster">
             <div class="Looks">
-                <img src="./images/Steamgames.png" alt="Steamgames">
                 <h3 id="skills">Skills</h3>
                 <h4>Gaming skills</h4>
                 <p>I have played many games before steam was a thing. I played a lot of games hard core, invested a lot of hours chasing leaderboard ranks.<br>
@@ -52,9 +49,18 @@
             </div>
         </div>
     </section>
-    <div class="contact-me">
-        <p id="Reach">Reach out to me</p>
-        <a class="Rada" href="mailto:keithwesley187@gmail.com">Talk to me</a>
-    </div>
+
+    <section class="grandmaster">
+        <div class="grandmaster2">
+            <img src="./images/Grandmaster.jpg" alt="Steamgames">
+        </div>
+    </section>
+
+    <section>
+        <div class="contact-me">
+            <p id="Reach">Reach out to me</p>
+            <a class="Rada" href="mailto:keithwesley187@gmail.com">Talk to me</a>
+        </div>
+    </section>
 </body>
 </html>
