--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Project</title>
+    <title>Keith Wesley</title>
 </head>
 <body>
     <div class="sugarNSpice"> 
@@ -14,11 +14,11 @@
                 <li><a href="#Reach">Contact</a></li>
                 <li><a href="#skills">Skills</a></li>
             </ul>
-            <a href="https://www.youtube.com/channel/UCGDtQIHKh6Xe1ic2_UH10iA" class="follow">Subscribe</a>
+            <a href="https://www.youtube.com/channel/UCGDtQIHKh6Xe1ic2_UH10iA" target="_blank" class="follow">Subscribe</a>
         </nav>
         <div class="introduction">
             <h1>Keith Wesley</h1>
-            <a href="./credentials/KEITH WESLEY updated CV.pdf" download="Wesley CV">Download CV</a>
+            <a href="./credentials/KEITH WESLEY updated CV.pdf" target="_blank" download="Wesley CV">Download CV</a>
         </div>
     </div>
 
@@ -39,7 +39,7 @@
     <section class="Skills">
         <div class="Skills2">
             <img src="./images/Steamgames.png" alt="Grandmaster">
-            <div class="Looks">
+            <div class="skills-text">
                 <h3 id="skills">Skills</h3>
                 <h4>Gaming skills</h4>
                 <p>I have played many games before steam was a thing. I played a lot of games hard core, invested a lot of hours chasing leaderboard ranks.<br>
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section class="grandmaster">
+    <section class="Punches">
         <div class="grandmaster2">
             <img src="./images/Grandmaster.jpg" alt="Steamgames">
         </div>
@@ -58,7 +58,7 @@
 
     <section>
         <div class="contact-me">
-            <p id="Reach">Reach out to me</p>
+            <p id="Reach">The Left Hands Guild Leader</p>
             <a class="Rada" href="mailto:keithwesley187@gmail.com">Talk to me</a>
         </div>
     </section>
